--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,17 @@
             <version>42.3.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
+
+
 
 </project>
