--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <display-name>Hello, Servlets!</display-name>
+    <display-name>Hello, Welcome to Robb's Banking Application Servlets!</display-name>
 
     <servlet>
         <servlet-name>TestServlet</servlet-name>
